# MoCommander

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  run.py
.github/workflows/: build.yml
src/: __init__.py  main.py
src/core/: __init__.py  config.py  file_ops.py
src/ui/: __init__.py  panels.py  themes.py
