[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mocommander"
version = "1.0.0"
description = "A Norton Commander clone built with Python and Textual"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mo Commander Team" }
]
keywords = ["file-manager", "tui", "terminal", "norton-commander", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
mocommander = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/mocommander"
Repository = "https://github.com/yourusername/mocommander"
Issues = "https://github.com/yourusername/mocommander/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]
